{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 12,
  "lineage": "f223bf09-c112-061c-614c-be7f01702982",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.10.1.50",
            "association_id": "eipassoc-0dc41cafe7260a624",
            "domain": "vpc",
            "id": "eipalloc-09f459ad8592eb1fb",
            "instance": "i-01b39315143cea0d4",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-07707230a38e910a3",
            "private_dns": "ip-10-10-1-50.eu-central-1.compute.internal",
            "private_ip": "10.10.1.50",
            "public_dns": "ec2-3-123-115-108.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.123.115.108",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.fursa-subnet",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web-server-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0502e817a62226e03",
            "arn": "arn:aws:ec2:eu-central-1:756446409310:instance/i-01b39315143cea0d4",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01b39315143cea0d4",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "nader",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07707230a38e910a3"
              }
            ],
            "primary_network_interface_id": "eni-07707230a38e910a3",
            "private_dns": "ip-10-10-1-50.eu-central-1.compute.internal",
            "private_ip": "10.10.1.50",
            "public_ip": "3.123.115.108",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06cc25e3c65439c1f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0155ba1ad2c7edd",
            "tags": {
              "Name": "web-server"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0a9535b22d7a5818f"
            ]
          },
          "dependencies": [
            "aws_network_interface.web-server-nic",
            "aws_security_group.allow_web",
            "aws_subnet.fursa-subnet",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:756446409310:internet-gateway/igw-04db0893dfcc50b62",
            "id": "igw-04db0893dfcc50b62",
            "owner_id": "756446409310",
            "vpc_id": "vpc-04dfa96c27baf5518"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web-server-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "attachment": [
              {
                "attachment_id": "eni-attach-0473a2a03687c5e39",
                "device_index": 0,
                "instance": "i-01b39315143cea0d4"
              }
            ],
            "id": "eni-07707230a38e910a3",
            "ipv6_address_count": 0,
            "mac_address": "02:d4:d8:86:cb:0e",
            "private_ip": "10.10.1.50",
            "private_ips": [
              "10.10.1.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0a9535b22d7a5818f"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c0155ba1ad2c7edd"
          },
          "dependencies": [
            "aws_security_group.allow_web",
            "aws_subnet.fursa-subnet",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fursa-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0042e79d28bedbe35",
            "owner_id": "756446409310",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04db0893dfcc50b62",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04db0893dfcc50b62",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "fursa"
            },
            "vpc_id": "vpc-04dfa96c27baf5518"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bc970b062901ce92",
            "route_table_id": "rtb-0042e79d28bedbe35",
            "subnet_id": "subnet-0c0155ba1ad2c7edd"
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_route_table.fursa-route-table",
            "aws_subnet.fursa-subnet",
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:756446409310:security-group/sg-0a9535b22d7a5818f",
            "description": "Allow Web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a9535b22d7a5818f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "756446409310",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-04dfa96c27baf5518"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "fursa-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:756446409310:subnet/subnet-0c0155ba1ad2c7edd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0c0155ba1ad2c7edd",
            "map_public_ip_on_launch": false,
            "owner_id": "756446409310",
            "tags": {
              "Name": "fursa-subnet"
            },
            "vpc_id": "vpc-04dfa96c27baf5518"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "nader-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:756446409310:subnet/subnet-01897fb4196d5b99a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-01897fb4196d5b99a",
            "map_public_ip_on_launch": false,
            "owner_id": "756446409310",
            "tags": {
              "Name": "fursa-subnet"
            },
            "vpc_id": "vpc-04dfa96c27baf5518"
          },
          "dependencies": [
            "aws_vpc.fursa"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fursa",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:756446409310:vpc/vpc-04dfa96c27baf5518",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0ae778c2ac7621fdd",
            "default_route_table_id": "rtb-079d52c9cfb37b722",
            "default_security_group_id": "sg-0afd2ed5c77388fea",
            "dhcp_options_id": "dopt-f70be09d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-04dfa96c27baf5518",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-079d52c9cfb37b722",
            "owner_id": "756446409310"
          }
        }
      ]
    }
  ]
}